...
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="20sp"
        />


    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="dd-mm-yy"
        android:textColorHint="@color/white"
        android:inputType="date"
        android:textColor="@color/white"
...
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="30sp"
        />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#001155"
        android:text="UPDATE"
        android:textColor="@color/white"
        android:textStyle="bold"
...
