...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <Button
                        android:id="@+id/Edit_buttonId"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@drawable/edit_24" />
<!--                        android:drawableRight="@drawable/ic_baseline_edit_24"-->

                        />

                    <Button
                        android:id="@+id/DeleteBUttonId"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="220dp"
                        android:drawableLeft="@drawable/delete_24" />
<!--                        android:drawableRight="@drawable/ic_baseline_delete_24"-->
                        />
...
