<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userRecords">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg3" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/containerFrame"
        android:layout_above="@id/bottom_naviagtion"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_naviagtion"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        />

</RelativeLayout>